<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:textSize="50sp"
        android:textAlignment="textEnd"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvDisplay"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        tools:ignore="LabelFor"
        />

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonClear"
                style="@style/Theme.Calculator"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/buttonClear"
                android:textColor="#FFFFFF"
                android:backgroundTint="#DD2000"

                />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonDel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                app:srcCompat="@drawable/backspace"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:contentDescription="@string/buttonDel"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonAdd"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/buttonSub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonSub"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/number_four"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button4"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/number_five"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/buttonMul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonMul"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/number_one"
                android:layout_margin="5dp"
                android:textSize="24sp"

                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button1"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/number_two"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button2"
                android:textColor="#FFFFFF" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/number_three"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonDiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonDiv"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSign"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonSign"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/black"
                />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/button0"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonDot"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/buttonEquals"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>